--- a/develop/vscode/settings.json
+++ b/develop/vscode/settings.json
@@ -102,17 +102,14 @@
   "window.dialogStyle": "custom",
   "window.commandCenter": true,
   "window.title": "${folderPath}",
-
   "editor.lineHeight": 22,
   // "editor.letterSpacing": 0.2,
-
   /** JetBrains */
   // "editor.fontFamily": "\"JetBrains Mono\", monospace",
   // "editor.fontWeight": "476",
   // "terminal.integrated.fontSize": 12.5,
   // "editor.fontSize": 11.1,
   // "editor.fontLigatures": true,
-
   /** Berkeley Mono */
   "editor.fontFamily": "\"Berkeley Mono\", monospace",
   "terminal.integrated.fontSize": 12.5,
@@ -123,33 +120,27 @@
   // "editor.fontSize": 11.5,
   "editor.fontLigatures": true,
   // "editor.letterSpacing": -0.5,
-
   /** Geist Mono */
   // "editor.fontFamily": "\"Geist Mono\", monospace",
   // "editor.fontWeight": "476",
   // "editor.fontSize": 11.5,
-
   /** Fira Code */
   // "editor.fontFamily": "Fira Code, monospace",
   // "editor.fontWeight": "476",
   // "editor.fontSize": 11.1,
   // "editor.fontLigatures": true,
   // "editor.letterSpacing": -0.5,
-
   // "editor.fontFamily": "'Droid Sans Mono', 'monospace', monospace"
   // "editor.fontSize": 14,
   // "editor.fontWeight": "normal",
   // "editor.fontFamily": "Liga Menlo, monospace",
-
   // "editor.fontSize": 11,
-
   // "editor.fontSize": 11.5,
   // "editor.fontSize": 11.5,
   // "editor.fontSize": 12,
   // "editor.fontSize": 12.5,
   // "editor.fontSize": 13,
   // "terminal.integrated.fontSize": 14,
-
   // "terminal.integrated.lineHeight": 1.3,
   "terminal.explorerKind": "external",
   // "editor.fontWeight": "510",
@@ -211,8 +202,44 @@
   "vsicons.dontShowNewVersionMessage": true,
   "editor.renderWhitespace": "all",
   "liveServer.settings.donotShowInfoMsg": true,
-  "workbench.activityBar.location": "top",
   "editor.multiCursorLimit": 100000,
   "nxConsole.showNodeVersionOnStartup": false,
-  "workbench.colorTheme": "Dracula",
+  "workbench.colorTheme": "Rosé Pine (no italics)",
+  "apc.activityBar": {
+    "position": "bottom",
+    "hideSettings": true,
+    "size": 37,
+    "itemSize": 37,
+  },
+  "apc.header": {
+    "height": 30
+  },
+  "apc.sidebar.titlebar": {
+    "height": 30,
+    "fontSize": 12
+  },
+  "apc.statusBar": {
+    "fontSize": 11
+  },
+  "apc.listRow": {
+    "lists": [
+      "explorer-folders-view",
+      "quick-input-list",
+      "results"
+    ],
+    "height": 22,
+    "fontSize": 12
+    // "lists": [
+    //   "customview-tree",
+    //   "results",
+    //   "open-editors",
+    //   "explorer-folders-view",
+    //   "outline-tree",
+    //   "scm-view",
+    //   "debug-view-content",
+    //   "debug-breakpoints",
+    //   "tree"
+    // ]
+  },
+  "apc.font.family": "Berkeley Mono",
 }
