--- a/develop/vscode/settings.json
+++ b/develop/vscode/settings.json
@@ -102,14 +102,17 @@
   "window.dialogStyle": "custom",
   "window.commandCenter": true,
   "window.title": "${folderPath}",
+
   "editor.lineHeight": 22,
   // "editor.letterSpacing": 0.2,
+
   /** JetBrains */
   // "editor.fontFamily": "\"JetBrains Mono\", monospace",
   // "editor.fontWeight": "476",
   // "terminal.integrated.fontSize": 12.5,
   // "editor.fontSize": 11.1,
   // "editor.fontLigatures": true,
+
   /** Berkeley Mono */
   "editor.fontFamily": "\"Berkeley Mono\", monospace",
   "terminal.integrated.fontSize": 12.5,
@@ -120,27 +123,33 @@
   // "editor.fontSize": 11.5,
   "editor.fontLigatures": true,
   // "editor.letterSpacing": -0.5,
+
   /** Geist Mono */
   // "editor.fontFamily": "\"Geist Mono\", monospace",
   // "editor.fontWeight": "476",
   // "editor.fontSize": 11.5,
+
   /** Fira Code */
   // "editor.fontFamily": "Fira Code, monospace",
   // "editor.fontWeight": "476",
   // "editor.fontSize": 11.1,
   // "editor.fontLigatures": true,
   // "editor.letterSpacing": -0.5,
+
   // "editor.fontFamily": "'Droid Sans Mono', 'monospace', monospace"
   // "editor.fontSize": 14,
   // "editor.fontWeight": "normal",
   // "editor.fontFamily": "Liga Menlo, monospace",
+
   // "editor.fontSize": 11,
+
   // "editor.fontSize": 11.5,
   // "editor.fontSize": 11.5,
   // "editor.fontSize": 12,
   // "editor.fontSize": 12.5,
   // "editor.fontSize": 13,
   // "terminal.integrated.fontSize": 14,
+
   // "terminal.integrated.lineHeight": 1.3,
   "terminal.explorerKind": "external",
   // "editor.fontWeight": "510",
@@ -212,7 +221,8 @@
     "itemSize": 37,
   },
   "apc.header": {
-    "height": 30
+    "height": 30,
+    "fontSize": 12
   },
   "apc.sidebar.titlebar": {
     "height": 30,
@@ -223,12 +233,13 @@
   },
   "apc.listRow": {
     "lists": [
-      "explorer-folders-view",
-      "quick-input-list",
-      "results"
+       "explorer-folders-view",
+       "quick-input-list",
+       "results",
+       "open-editors"
     ],
     "height": 22,
-    "fontSize": 12
+    "fontSize": 12,
     // "lists": [
     //   "customview-tree",
     //   "results",
